fix: Fixed zoom: disable keypad/mouse zoom in difference mode and flicker mode, while keeping zoom functionality working as usual in other modes, Fixed simultaneous scroll in flicker and differ mode ,

--- a/src/components/MultiViewer/MultiViewer.scss
+++ b/src/components/MultiViewer/MultiViewer.scss
@@ -25,13 +25,13 @@
     border: 2px solid var(--document-background-color);
     box-sizing: border-box;
     &.active {
-      border: 2px solid var(--blue-5);
+      border: 2px solid #a7ffc5;
     }
 
     .borderLineBottom {
       visibility: hidden;
       height: 2px;
-      background-color: var(--blue-5);
+      background-color: #a7ffc5;
       position: absolute;
       bottom: 0;
       z-index: 41;
