--- a/src/components/ResizeBar/ResizeBar.scss
+++ b/src/components/ResizeBar/ResizeBar.scss
@@ -4,7 +4,7 @@
   justify-content: center;
   cursor: col-resize;
   width: 14px;
-  background-color: var(--panel-background);
+  background-color: white;
   border-right: 1px solid var(--border);
   border-left: 1px solid var(--border);
   z-index: 65;
